[package]
name = "x42ltc-sys"
version = "0.0.6"
authors = ["Johannes Maibaum <jmaibaum@gmail.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
description = "FFI crate for x42’s libltc (Linear/Longitudinal Time Code library)"
repository = "https://github.com/jmaibaum/x42ltc"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
