[package]
name = "x42ltc"
version = "0.0.6"
authors = ["Johannes Maibaum <jmaibaum@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "Safe Rust wrapper crate for x42’s libltc (Linear/Longitudinal Time Code library)"
repository = "https://github.com/jmaibaum/x42ltc"

[dependencies]
x42ltc-sys = { path = "../x42ltc-sys", version = "0.0.6" }
